# BashableNotes

./: .gitignore  Cargo.toml  Dockerfile  README.md
bashable_notes/: Cargo.toml
bashable_notes/src/: build.rs  main.rs
bashable_notes_client/: Cargo.toml  package-lock.json  package.json
bashable_notes_client/src/: filetree.js  index.html  index.js  style.css  uikit.js
bashable_notes_server/: Cargo.toml
bashable_notes_server/src/: docker.rs  lib.rs  main.rs  renderer.rs  server.rs
res/: index.html  onedark.css  style.css  test.md
src/: main.rs  parser.rs  websocket.rs
