[package]
name = "BashableNotes"
version = "0.1.0"
authors = ["Ben Sheffield <bshefb@gmail.com>"]

[dependencies]
iron = "0.6.0"
staticfile = "0.5.0"
mount = "0.4.0"
time = "0.1.39"
router = "*"
pulldown-cmark = { version = "0.0.11", default-features = false }
serde = "*"
serde_json = "*"
serde_derive = "*"