[package]
name = "bashable_notes"
version = "0.1.0"
authors = ["Ben Sheffield <bshefb@gmail.com>"]
build = "src/build.rs"
include = ["static.rs"]

[dependencies]
iron = "*"
mount = "*"
mime = "*"
phf = "0.7.12"
include_dir = "0.1.4"
glob = "*"
mime_guess = "*"
bashable_notes_server = { path = "../bashable_notes_server/" }

[build-dependencies]
include_dir = "0.1.4"
tempdir = "*"